# ros_e_gazebo

./: Introdução ao ROS e ao Gazebo.pptx  README.md  README.md~  Trabalho Final de Simuladores.pptx  commands  move2Pos.cpp  trabalho final.pptx
COM920 - Tópicos Avançados - Simulação/: Aulas de Simuladores.pptx  README.md  README.md~
COM920 - Tópicos Avançados - Simulação/src/mybot_control/: CMakeLists.txt  package.xml
COM920 - Tópicos Avançados - Simulação/src/mybot_control/src/: mybot_control.cpp
COM920 - Tópicos Avançados - Simulação/src/mybot_description/: package.xml
COM920 - Tópicos Avançados - Simulação/src/mybot_gazebo/: package.xml
COM920 - Tópicos Avançados - Simulação/src/mybot_gazebo/launch/: mybot_world.launch
COM920 - Tópicos Avançados - Simulação/src/mybot_gazebo/worlds/: mybot.world
COM920 - Tópicos Avançados - Simulação/src/simuladores/: CMakeLists.txt
COM920 - Tópicos Avançados - Simulação/src/simuladores/src/: exercicio1.cpp  pubvel.cpp
mybot_control/: package.xml
mybot_description/urdf/: mybot.urdf~
mybot_gazebo/launch/: mybot_world.launch
mybot_gazebo/worlds/: mybot.world
simuladores/: CMakeLists.txt  package.xml
simuladores/src/: subpose.cpp
src/mybot_control/src/: mybot_control.cpp  scansub.cpp
src/mybot_description/urdf/: mybot.urdf
src/mybot_gazebo/launch/: trabalho_final.launch
src/mybot_gazebo/worlds/: trabalho_final.world
src/simuladores/launch/: example.launch
src/simuladores/src/: hello.cpp
